--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>World War III</title>
     <link rel="stylesheet" href="bower_components/normalize-css/normalize.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
     <!--
 			This map was created using Pixel Map Generator by amCharts and is licensed under the Creative Commons Attribution 4.0 International License.
@@ -94,25 +95,35 @@
   </head>
   <body style="margin: 0;background-color: rgba(80,80,80,1);">
 		<div id="map" style="width: 100%; height: 695px;"></div>
+
     <div class="container">
-      <h1>World War III (or not?)<br>
-        <small><small>When TSHTFAEGTH</small></small></h1>
-        <section class="intro">
-          <p>
-            China and the United States have been at odds over several international and domestic disputes. From
-        cyberwarfare, trade deficits, to human rights, and to China's open agression in Southeast Asia, where it has built military installations on sparse islands whose ownership is contested by several ASEAN countries such as Vietnam, Japan, Philippines, Indonesia, and Malaysia.
-          </p>
+      <section class="intro">
+        <h1>TEOTWAWKI<br>
+          <small>A Shooting War Between the U.S. and China</small></h1>
+            <p>
+              China and the United States have been at odds over several international and domestic disputes. From
+          cyberwarfare, trade deficits, to human rights, and to China's open agression in Southeast Asia, where it has built military installations on sparse islands whose ownership is contested by several ASEAN countries such as Vietnam, Japan, Philippines, Indonesia, and Malaysia.
+            </p>
 
-          <p>
-            Tensions have never been greater. Exacerbating the situation is China's muscle-flexing and widely reported bullying of it's much smaller and less powerful neighbors. It's navy ships agressively maneuvering to collide with the smaller fishing boats of it's neighbors and warning them over loudspeaker and radio calls to that they are tresspassing on Chinese waters, these incidents have been growing by the number. Even U.S. military spy planes flying in the area, an international zone, have been warned by the Chinese bases over radio.
-          </p>
+            <p>
+              Tensions have never been greater. Exacerbating the situation is China's muscle-flexing and widely reported bullying of it's much smaller and less powerful neighbors. It's navy ships agressively maneuvering to collide with the smaller fishing boats of it's neighbors and warning them over loudspeaker and radio calls to that they are tresspassing on Chinese waters, these incidents have been growing by the number. Even U.S. military spy planes flying in the area, an international zone, have been warned by the Chinese bases over radio.
+            </p>
 
-          <p>
-            Now, the United States is challenging the Asian bully by sending a battleship in those international waters, purportedly to ensure free navigation of the seas both for navies, private, and commercial vessels.
-          </p>
+            <p>
+              Now, the United States is challenging the Asian bully by sending a battleship in those international waters, purportedly to ensure free navigation of the seas both for navies, private, and commercial vessels.
+            </p>
 
-          <h2>The question is, if tensions escalate and shooting breaks out, who wins?</h2>
-        </section>
+            <h2><small>What happens if shooting breaks out?</small></h2>
+      </section>
+
+      <section class="start-btn">
+        <button type="button" class="btn btn-warning">Start a War?</button>
+      </section>
+
+      <section class="strike-btns">
+        <button type="button" class="btn btn-primary strike-btn">U.S. Strike China</button>
+        <button type="button" class="btn btn-danger strike-btn">China Strike U.S.</button>
+      </section>
     </div>
 
 
