added event messages to the dom

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <h1>TEOTWAWKI<br>
           <small>A Shooting War Between the U.S. and China</small></h1>
             <p>
-              China and the United States have been at odds over several international and domestic disputes. From
-          cyberwarfare, trade deficits, to human rights, and to China's open agression in Southeast Asia, where it has built military installations on hotly disputed sparse islands whose ownership is contested by several ASEAN countries such as Vietnam, Japan, Philippines, Indonesia, and Malaysia.
+              China and the United States have been at odds over several international and domestic disputes. From cyberwarfare, trade deficits, to human rights, and to China's open agression in Southeast Asia, where it has built military installations on hotly disputed sparse islands whose ownership is contested by several ASEAN countries such as Vietnam, Japan, Philippines, Indonesia, and Malaysia.
             </p>
 
             <p>
@@ -108,11 +107,11 @@
             </p>
 
             <p>
-              The United States has the most powerful naval force in the world. It has 10 Carrier Strike Groups. 3 of which are contantly at sea for ready deployment and projection of power. These CSGs have a phalanx of ships including 1 aircraft carrier a host of attack and defense frigates, destroyers, battleships, and a couple of nuclear powered submarines.
+              The United States has the most powerful naval force in the world. It has 10 Carrier Strike Groups. 3 of which are contantly at sea for ready deployment and projection of power. These CSGs have a phalanx of ships including 1 aircraft carrier a host of attack and defense frigates, destroyers, battleships, and a couple of nuclear powered submarines. They never have to dock for fuel and supplies, and are supported by hundreds of logistics ships.
             </p>
 
             <p>
-              China on the other hand, has been struggling to match the naval power of the United States, even if only in photo ops where they display the only aircraft carrier they have which is an old refurbished one they bought from the former Soviet Union. It, together with out-of-place ships in photos the Chinese government released have impressed the untrained eye. But to the acutely aware and savvy military watcher, China has revealed a glaring weakness, incompetence of its commanders, or just plain theatrics of its political rulers.
+              China on the other hand, has been struggling to match the naval power of the United States, even if only in photo ops where they display the only aircraft carrier they have which is an old refurbished one they bought from the former Soviet Union. It, together with out-of-place ships in photos the Chinese government released have impressed the untrained eye. But to the acutely aware and savvy military watcher, China has revealed glaring weaknesses, incompetence of its commanders, or just plain theatrics of its political rulers. The most glaring of which is that this force can never stray too far from the mainland due to the lack of logistics support.
             </p>
 
             <p>
@@ -136,6 +135,11 @@
     <div class="world-map hidden">
       <div id="map" style="width: 100%; height: 695px;"></div>
     </div>
+
+    <!-- game progress message -->
+    <section>
+      <h2 class="game-progress"></h2>
+    </section>
 
     <!-- stike/game buttons -->
     <section class="strike-btns hidden">
