added instruction message to index.html file on map reveal

--- a/index.html
+++ b/index.html
@@ -137,16 +137,17 @@
     </div>
 
     <!-- game progress message -->
-    <section>
-      <h2 class="game-progress"></h2>
-    </section>
+    <div class="container">
+      <section class="progress-message hidden">
+        <h2 class="game-progress">Click on either country on the map!</h2>
+      </section>
 
-    <!-- stike/game buttons -->
-    <section class="strike-btns hidden">
-      <button type="button" class="btn btn-primary us-strike-btn">U.S. Strike China</button>
-      <button type="button" class="btn btn-danger china-strike-btn">China Strike U.S.</button>
-    </section>
-
+      <!-- stike/game buttons -->
+      <section class="strike-btns hidden">
+        <button type="button" class="btn btn-primary us-strike-btn">U.S. Strike China</button>
+        <button type="button" class="btn btn-danger china-strike-btn">China Strike U.S.</button>
+      </section>
+    </div>
 
     <!-- lib files -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
